--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,15 @@
             <artifactId>poi-excelant</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.deepoove</groupId>
+            <artifactId>poi-tl</artifactId>
+            <version>1.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.6</version>
+        </dependency>
     </dependencies>
 </project>
